--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -8,11 +8,32 @@
 
 <div class="container body-content">
 
-  <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+  <h1 th:text="${title}">Job Listings</h1>
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
+  <table>
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Job Name</th>
+      <th>Employer</th>
+      <th>Location</th>
+      <th>Position Type</th>
+      <th>Core Competency</th>
+    </tr>
+    </thead>
+  </table>
 
+  <table class ="job-listing" th:each="item: ${jobs}">
+    <tr th:each="item: ${jobs}">
+      <td th:text="'ID: ' + ${item.id}"></td>
+      <td th:text="'Name: ' + ${item.name}"></td>
+      <td th:text="'Employer: ' + ${item.employer}"></td>
+      <td th:text="'Location: ' + ${item.location}"></td>
+      <td th:text="'Position Type: ' + ${item.positionType}"></td>
+      <td th:text="'Skills: ' + ${item.coreCompetency}"></td>
+    </tr>
+  </table>
 </div>
-
 </body>
 </html>
